testdata/err/string_literal_unterminated_unicode_end.err.txt
error: unterminated unicode escape sequence
- testdata/err/string_literal_unterminated_unicode_end.tn:1:18
1 | main = || { "foo \u{fffff" };
  |                  ^^^^^^^^ unterminated unicode escape sequence
- testdata/err/string_literal_unterminated_unicode_end.tn:1:13
1 | main = || { "foo \u{fffff" };
  |             -------------- in this string literal
